--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'jstl:jstl:1.2'
     compile 'org.apache.commons:commons-dbcp2:2.0'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+
 	
     //include in compile only, exclude in the war
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
