--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ gretty {
 }
 
 // JDK 7
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+//sourceCompatibility = 1.7
+//targetCompatibility = 1.7
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
